@@ -25,6 +25,8 @@ Extend DashProfiler::Apache to do handler plumbing for periods?
 
   Added period_strict_start and period_strict_end attributes to control how
     missing/multiple start_sample_period() & end_sample_period calls are handled.
+    The attributes can be code refs which are called when needed.
+  Added extra_info attribute for use by scripts to carry any extra information.
 
 =head2 DashProfiler 1.07 - r32 - Aug 16 2007
 
